Fixed wrong colors from previous commit series

--- a/src/components/blockinfo.scss
+++ b/src/components/blockinfo.scss
@@ -89,12 +89,12 @@
 }
 
 .block-utxo-amount {
-    color: rgb(33, 192, 46);
+    color: #4fbf80;
     white-space: nowrap;
 }
 
 .block-utxo-amount-minus {
-    color: rgb(255, 82, 59);
+    color: #d14444;
     white-space: nowrap;
 }
 
@@ -172,7 +172,7 @@
 }
 
 .block-lamp-blue {
-    background-color: rgb(30, 128, 207);
+    background-color: #a5cce8;
     width: 1.5rem;
     height: 1.5rem;
     border-radius: 50%;
@@ -180,7 +180,7 @@
 }
 
 .block-lamp-red {
-    background-color: rgb(202, 47, 27);
+    background-color: #ea6554;
     width: 1.5rem;
     height: 1.5rem;
     border-radius: 50%;
@@ -200,7 +200,7 @@
 }
 
 .utxo-amount {
-    background-color: rgb(65, 141, 65);
+    background-color: #237f4b;
     padding: .2rem .7rem;
     border-radius: .4rem;
     word-wrap: none;
@@ -208,7 +208,7 @@
     
 }
 .utxo-amount-minus {
-    background-color: rgb(195, 38, 38);
+    background-color: #d14444;
     padding: .2rem .7rem;
     border-radius: .4rem;
     word-wrap: none;
@@ -221,20 +221,20 @@
 }
 
 .accepted-true {
-    background-color: rgb(65, 141, 65);
+    background-color: #237f4b;
     padding: 0.2em .4rem;
     border-radius: .4rem;
 
 }
 
 .accepted-false {
-    background-color: rgb(255, 82, 59);
+    background-color: #d14444;
     padding: 0.2em .4rem;
     border-radius: .4rem;
 }
 
 .confirmations {
-    background-color: rgb(65, 141, 65);
+    background-color: #237f4b;
     padding: 0.2em .4rem;
     border-radius: .4rem;
 }
